Fixed failing tests through command line